<resources>
    <string name="login_last_name">Фамилия</string>
    <string name="login_first_name">Имя</string>
    <string name="login_phone_number">Номер телефона</string>
    <string name="login_car_type">Марка автомобиля</string>
    <string name="login_car_model">Модель автомобиля</string>
    <string name="login_car_color">Цвет автомобиля</string>
    <string name="login_passport_info">Пасспортные данные</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="phone">Номер телефона</string>
    <string name="phone.number">(555) 123-456</string>
    <string name="btn.next">Далее</string>
    <string name="authorization">Вам будет выслано смс с кодом\n подтверждения вашего номера.\n Введите его в поле ниже </string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Выход</string>
    <string name="title_activity_register_next">RegisterNextActivity</string>
    <string name="title_activity_maps">Map</string>

    <string name="title_activity_order">OrderActivity</string>
    <string name="title_activity_finish_order">FinishOrder</string>
    <string name="title_activity_confirm_sing_up">ConfirmSingUpActivity</string>
    <string name="title_activity_order_details">OrderDetailsActivity</string>
    <string name="title_activity_garaj">Настройки</string>
    <string name="title_activity_car_details">CarDetailsActivity</string>
    <string name="title_activity_user_details">UserDetailsActivity</string>
    <string name="title_activity_finish_order_details">Детали заказа</string>
    <string name="title_activity_new_orders">Заказы</string>

    <string name="new_order">Заказ</string>
    <string name="orders">ЗАКАЗЫ</string>
    <string name="title_activity_order_details_activity2">OrderDetailsActivity2</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_sos">SosActivity</string>
    <string name="title_activity_help">Тех. поддержка</string>
    <string name="title_car_details">Транспорт</string>
    <string name="title_user_details">Мой кабинет</string>
    <string name="help">Телефон для справок:\n  +996702191111\n</string>
    <string name="WhatsApp">Для WhatsApp сообщений:\n +996702191111\n</string>
    <string name="info">Почта:\n taxi.support@mirsoft.kg\n</string>
    <string name="title_activity_about">О такси (тарифы)</string>
    <string name="tariff_line1">Cтоимость посадки = 40 сом\n</string>
    <string name="tariff_line2">1 километр = 12 сом.\n (округляется до метра)\n</string>
    <string name="tariff_line3">Например:\n 0.25 киллометра = 43 сом.\n 2 километра = 64 сом.\n 3 километра = 76 сом.\n</string>
    <string name="tariff_line8">Стоимость поездки округляется по метражу\n</string>
    <string name="tariff_line4">Ожидание между точками = 3 сом/мин, первые 5 минут бесплатно.\n</string>
    <string name="tariff_line5">Комиссия за 1 поездку 10 сом.\n С борта комиссия 3 сома.\n Пополнять баланс возможно в терминалах "Мобильник"\n на свой лиц. счёт (свой номер телефона)</string>
    <string name="tariff_line6">Если клиент выбрал фиксированную плату,\n оплачивается только данная сумма.</string>
    <string name="tariff_line7">Доплата за выезд за пределы города Бишкек,\n  + 40 сом к общей сумме</string>
    <string name="info_version">EasyTaxi Водитель  для Андроид\n Версия %1$s.</string>
    <string name="forgot.password">Забыли пароль?</string>
    <string name="btn.authorization">Авторизация</string>
    <string name="new.sms">Отправить смс заново</string>
    <string name="met.code">Код смс:</string>
    <string name="password.hint">******</string>
    <string name="password">Пароль</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="meter_currency">сом</string>
    <string name="meter_distance">км</string>
    <string name="meter_time">мин</string>
    <string name="order_id_prefix">№</string>

    <string name="map">Карта</string>


    <!-- MainSplashActivity -->

    <string name="s_signin">Войти</string>
    <string name="s_regist">Регистрация</string>


    <!-- MapsFragment -->

    <string name="alert_info_order">Инфо заказа</string>
    <string name="s_borta">С БОРТА</string>

    <!-- CarDetails -->
    <string name="color">Цвет автомобиля</string>
    <string name="liceniesdriver">Серия и номер прав</string>
    <string name="numberauto">Номер авто</string>


    <!-- NavigationMenu -->
    <string name="exit">Выход</string>
    <string name="car.details">Инфо о машине</string>
    <string name="share">Поделиться</string>
    <string name="accountInfo">Лицевой счёт</string>
    <string name="about">О программе</string>
    <string name="tariffInfo">О тарифах</string>

    <!-- logout -->
    <string name="logout.confirm_title">Вы хотите выйти?</string>
    <string name="logout.confirm_text">Выйти</string>
    <string name="logout.cancel_text">Отмена</string>



    <!-- Errors -->
    <string name="error_network_unavailable">Нету подключения к интернету</string>
    <string name="error_invalid_phone">Это поле не правильно заполнено</string>
    <string name="error_invalid_password">Пароль слишком корткий</string>
    <string name="error_incorrect_password">Телефон или пароль указаны неверно</string>
    <string name="error_field_required">Это поле обязяательное</string>
    <string name="error_phone_must_be_unique">Пользователь с таким номером уже существует</string>
    <string name="error_an_error_has_occurred_try_again">Произошла ошибка, попробуйте еще раз</string>
    <string name="error_unable_to_get_data_from_the_server">Не удалось получить данные с сервера</string>
    <string name="error_could_not_connect_to_server">Не удалось подключится к серверу</string>
    <string name="error_invalid_phone_format">Телефон должен состоять из 13 символов</string>
    <string name="error_phone_not_registered">Пользователь с таким номером не зарегистрирован</string>
    <string name="error_could_not_activate">Не удалось активировать</string>
    <string name="error_invalid_activation_code">Неверный код активации</string>
    <string name="title_fragment_forgot_password">Забыли пароль?</string>
    <string name="title_activity_signup">Регистрация</string>


    <string name="wait_please">Пожалуйста, подождите</string>
    <string name="sms_sent">СМС выслан</string>
    <string name="new_password">Новый пароль:</string>
    <string name="password_changed">Пароль изменен</string>
    <!-- End Errors -->

    <!-- Sign up -->
    <string name="signup.submit">Подтвердить</string>
    <string name="signin">Войти</string>
    <string name="signup.default_first_name">Имя</string>
    <string name="signup.default_last_name">Фамилия</string>

    <string name="you_are_online">Вы сейчас онлайн</string>
    <string name="you_are_offline">Вы сейчас оффлайн</string>

    <!-- Strings related to login -->
    <string name="prompt_phone_number">Телефон</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>

    <string name="adress">Адрес</string>
    <string name="counter">По счётчику</string>
    <string name="description">Доп. инфо</string>
    <string name="fixedprice">Фиксированная</string>
    <string name="stopadress">Куда доставить</string>

    <string name="sms_send_toast">На номер %1$s будет выслано смс с кодом подтверждения. Введите его в поле "Код подтверждение".</string>

    <string name="failed_create_bort_order">Не удалось создать заказ</string>
</resources>
