<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu"
        android:checkableBehavior="single"
        android:menuCategory="secondary">
        <item
            android:id="@+id/main"
            android:title="@string/map"
            />
        <item
            android:id="@+id/carDetails"
            android:title="@string/car.details"
            />
        <item
            android:id="@+id/accountInfo"
            android:title="@string/accountInfo"
            />
    </group>

    <group
        android:id="@+id/system"
        android:menuCategory="container"
        android:checkableBehavior="none">
        <item
            android:id="@+id/share"
            android:title="@string/share"
            />

        <item
            android:id="@+id/exit"
            android:title="@string/action_exit"
            />
    </group>

</menu>