<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="taxi.city.citytaxidriver.HelpActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/main_background"
        android:scaleType="centerCrop"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:text="@string/tariff_line1"
                android:textColor="@color/translucent_lime"
                android:textSize="@dimen/font_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"/>
            <TextView
                android:text="@string/tariff_line2"
                android:textColor="@color/translucent_lime"
                android:textSize="@dimen/font_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"/>
            <TextView
                android:text="@string/tariff_line3"
                android:textColor="@color/translucent_lime"
                android:textSize="@dimen/font_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"/>
            <TextView
                android:text="@string/tariff_line4"
                android:textColor="@color/translucent_lime"
                android:padding="5dp"
                android:textSize="@dimen/font_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"/>
            <TextView
                android:text="@string/tariff_line5"
                android:textColor="@color/translucent_lime"
                android:padding="5dp"
                android:textSize="@dimen/font_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"/>
            <TextView
                android:text="@string/tariff_line6"
                android:textColor="@color/translucent_lime"
                android:padding="6dp"
                android:textSize="@dimen/font_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
