<RelativeLayout
    android:id="@+id/rlsignin"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/llPhoneNumber"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/llPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:weightSum="1"
        android:baselineAligned="false"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_below="@+id/tvPhoneNumber"
        android:gravity="center|center_horizontal">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spCodNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:layout_toLeftOf="@+id/metPhoneNumber" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/metPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="0.9"
            android:maxLength="9"
            app:met_baseColor="@color/white"
            android:hint="@string/phone.number"
            app:met_maxCharacters="9"
            app:met_primaryColor="@color/white"
            android:textColor="@color/white"
            android:layout_alignBottom="@+id/spCodNumber"
            android:layout_alignParentRight="true"
            />
    </LinearLayout>


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/metPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_baseColor="@color/white"
        app:met_maxCharacters="16"
        android:maxLength="16"
        android:inputType="textPassword"
        app:met_primaryColor="@color/white"
        android:hint="@string/password.hint"
        android:layout_below="@id/tvPassword"
        android:gravity="center_horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:background="@drawable/button_shape_yellow"
        android:textColor="@color/ColorPrimary"
        android:layout_below="@+id/metPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:paddingLeft="@dimen/spacing_small"
        android:paddingRight="@dimen/spacing_small"
        />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/splashPFinish"
        android:text="@string/forgot.password"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
         />

</RelativeLayout>
