<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/splash_background"
    android:id="@+id/userContainer"
    tools:context="taxi.city.citytaxidriver.UserDetailsActivity.UserDetailsFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/metLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_baseColor="@color/white"
            app:met_maxCharacters="20"
            app:met_floatingLabel="highlight"
            android:maxLength="20"
            app:met_primaryColor="@color/white"
            android:hint="@string/login_last_name"
            android:paddingLeft="10dp"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/white"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/metFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_baseColor="@color/white"
            app:met_maxCharacters="20"
            app:met_floatingLabel="highlight"
            android:maxLength="20"
            app:met_primaryColor="@color/white"
            android:hint="@string/login_first_name"
            android:paddingLeft="10dp"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/white"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="e-mail"
            android:id="@+id/editTextEmail"
            android:inputType="textEmailAddress"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:layout_marginTop="@dimen/spacing_tiny" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Дата рождения"
            android:imeOptions="actionNext"
            android:id="@+id/editTextDoB"
            android:inputType="date"
            android:visibility="gone"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:layout_centerHorizontal="true"
            >

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="+996"
                android:text="+996"
                android:gravity="center"
                android:id="@+id/textViewExtra"
                android:inputType="phone"
                android:visibility="gone"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/metPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_baseColor="@color/white"
                app:met_maxCharacters="14"
                app:met_floatingLabel="highlight"
                android:maxLength="16"
                app:met_primaryColor="@color/white"
                android:hint="@string/phone"
                android:paddingLeft="10dp"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:textColor="@color/white"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:visibility="gone"
                />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:id="@+id/relativeLayoutPassword"
            android:layout_height="wrap_content">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/metPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_baseColor="@color/white"
                app:met_maxCharacters="16"
                app:met_floatingLabel="highlight"
                android:maxLength="16"
                app:met_primaryColor="@color/white"
                android:hint="@string/password"
                android:paddingLeft="10dp"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:textColor="@color/white"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                />

            <ImageButton
                android:id="@+id/imageButtonShowPassword"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_alignRight="@+id/metPassword"
                android:layout_alignEnd="@+id/metPassword"
                android:background="#00ffffff"/>

            <ImageButton
                android:id="@+id/imageButtonShowPasswordIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:background="@drawable/ic_eye"
                android:layout_centerVertical="true"
                android:layout_alignRight="@+id/metPassword"
                android:layout_alignEnd="@+id/metPassword" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutBackExitGroup"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp">

        <Button
            style="@style/mediumButton.Yellow"
            android:text="Назад"
            android:id="@+id/buttonBack"
            android:layout_margin="10dp"
            android:visibility="gone"/>

        <Button
            style="@style/mediumButton.Yellow"
            android:text="Сохранить"
            android:id="@+id/buttonSave"
            android:layout_margin="10dp" />

    </LinearLayout>

</RelativeLayout>
